[package]
name = "tokio-openssl"
version = "0.6.1"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
repository = "https://github.com/sfackler/tokio-openssl"
description = """
An implementation of SSL streams for Tokio backed by OpenSSL
"""

[dependencies]
futures = "0.3"
openssl = "0.10.32"
openssl-sys = "0.9"
pin-project = "1.0"
tokio = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }

[patch.crates-io]
openssl = { git = 'https://github.com/wongsyrone/rust-openssl', rev = 'acb80bf3514ea620cc814b0def26cc4bf893e778' }
openssl-sys = { git = 'https://github.com/wongsyrone/rust-openssl', rev = 'acb80bf3514ea620cc814b0def26cc4bf893e778' }
