[package]
name = "tokio-openssl"
version = "0.6.2"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
repository = "https://github.com/sfackler/tokio-openssl"
description = """
An implementation of SSL streams for Tokio backed by OpenSSL
"""

[dependencies]
futures = "0.3"
openssl = "0.10.32"
openssl-sys = "0.9"
tokio = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }

[patch.crates-io]
openssl = { git = 'https://github.com/wongsyrone/rust-openssl', rev = 'f6e5f4f73a475b11421a827ad6667ac9237028b1' }
openssl-sys = { git = 'https://github.com/wongsyrone/rust-openssl', rev = 'f6e5f4f73a475b11421a827ad6667ac9237028b1' }
